# git-manager

./: .gitignore  .prettierignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.agents/: AGENTS.md
.claude/: launch.json
.claude/agents/: architecture-reviewer.md
.github/workflows/: deploy-landing.yml  prepare-release.yml  (+1 more)
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.e2e.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: error.rs  lib.rs  main.rs  models.rs  state.rs  utils.rs
apps/desktop/src-tauri/src/commands/: activity_log.rs  agent.rs  ai.rs  bisect.rs  blame.rs  branch.rs  cherry_pick.rs  commit.rs  conflict.rs  fixup.rs  github.rs  interactive_rebase.rs  log.rs  mod.rs  ollama.rs  patch.rs  rebase.rs  remote.rs  repo.rs  rollback.rs  ssh.rs  stash.rs  submodule.rs  tasks.rs  terminal.rs  themes.rs  undo.rs  worktree.rs
apps/desktop/src-tauri/src/services/: activity_log.rs  agent_session.rs  ai_activity.rs  ai_anthropic.rs  ai_context.rs  ai_convention.rs  ai_openai_compatible.rs  ai_provider.rs  ai_registry.rs  dependency_patch.rs  git_bisect.rs  git_blame.rs  git_branch.rs  git_cherry_pick.rs  git_commit.rs  git_conflict.rs  git_diff.rs  git_files.rs  git_fixup.rs  git_graph.rs  git_interactive_rebase.rs  git_merge_diff.rs  git_patch.rs  git_rebase.rs  git_remote.rs  git_repo.rs  git_rollback.rs  git_stash.rs  git_worktree.rs  mod.rs  pr_template.rs  terminal_pty.rs
assets/: index-D-6ed346.css  index-D9KEAF9N.js  index-Gte-hy5U.js
doc/: README.md  ROADMAP.md
docs/: README.md  ROADMAP.md
plans/: peppy-kindling-creek.md
(+1015 files in other folders)
