[package]
name = "git-manager"
version = "0.1.0"
description = "Git Manager Desktop"
authors = ["git-manager"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "git_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "tray-icon", "protocol-asset"] }
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = { version = "0.19", features = ["ssh", "https"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
glob = "0.3"
# Real PTY for the integrated terminal (spawns the user's login shell so ~/.zshrc is sourced).
portable-pty = "0.8"

# WebdriverIO E2E testing support (behind the "e2e" feature, see docs/architecture — this
# embeds a WebDriver server in the binary, so it must never be compiled into a real build).
tauri-plugin-wdio = { version = "1", optional = true }
tauri-plugin-wdio-webdriver = { version = "1", optional = true }

[features]
e2e = ["dep:tauri-plugin-wdio", "dep:tauri-plugin-wdio-webdriver"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
